# vinctum-ml

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
client/go/: vinctum_ml.go
src/vinctum_ml/: config.py  logging.py  versioning.py
src/vinctum_ml/data/: generator.py
src/vinctum_ml/evaluation/: evaluator.py
src/vinctum_ml/models/: anomaly_detector.py  route_scorer.py
src/vinctum_ml/serving/: app.py
tests/: test_generator.py  test_models.py  test_serving.py
