[project]
name = "vinctum-ml"
version = "0.1.0"
description = "AI/ML layer for Vinctum decentralized data courier platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",
    "skl2onnx>=1.17.0",
    "onnxmltools>=1.12.0",
    "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
